# py-writes-ts

./: .gitignore  README.md  pyproject.toml
py_writes_ts.egg-info/: PKG-INFO  SOURCES.txt
src/py_writes_ts/: __init__.py  class_to_interface.py  function_generator.py  type_translator.py
tests/: test_function_generator.py  test_turn_dataclass_to_interface.py
