[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "py_writes_ts"
version = "2024.0.0"
dependencies = [
]
requires-python = ">=3.8"
authors = [
  {name = "Oliver Sanz", email = "oliverlsanz@gmail.com"},
]
maintainers = [
  {name = "Oliver Sanz", email = "oliverlsanz@gmail.com"},
]
description = "Writes typescript so you don't have to."
readme = "README.md"
license = {file = "LICENSE.txt"}
keywords = ["typescript"]
classifiers = [
  "Programming Language :: Python"
]

[project.urls]
Homepage = "https://example.com"
